<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/light_blue_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/header_title"
        style="@style/TobBarTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_top_bar"
        android:gravity="center"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/section_notifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_settings_section"
        android:paddingStart="8dp"
        android:paddingTop="14dp"
        android:paddingEnd="16dp"
        android:paddingBottom="14dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="@string/notifications"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notifications_switcher"
            android:layout_width="50dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@id/delete_after"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/delete_after"
            app:layout_constraintTop_toTopOf="@id/delete_after"
            tools:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_settings_section"
        android:paddingStart="8dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/section_notifications">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="@string/app_version"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="0.1.1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>